CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

foreach(TARGET lm)
  ADD_EXECUTABLE(${TARGET} ${TARGET}.cc)
  target_link_libraries(${TARGET} cnn ${LIBS} pthread)
  if(UNIX AND NOT APPLE)
    target_link_libraries(${TARGET} rt)
  endif()
  if (WITH_CUDA_BACKEND)
    add_dependencies(${TARGET} cnncuda)
    target_link_libraries(${TARGET} cnncuda)
    CUDA_ADD_CUBLAS_TO_TARGET(${TARGET})
  endif (WITH_CUDA_BACKEND)
endforeach()

