[package]
name = "dynet"
version = "0.1.0"
authors = ["Hiroki Teranishi <teranishihiroki@gmail.com>"]
description = "DyNet: The Dynamic Neural Network Toolkit"
keywords = ["deep-learning", "neural-networks", "machine-learning"]
license = "Apache-2.0"
repository = "https://github.com/clab/dynet"
readme = "README.md"

[dependencies]
backtrace = "0.3"
dynet-sys = { path = "dynet-sys" }
libc = "0.2"
